Implement delete option from term appbar.
- remove extra delete methods that are not needed from repository classes.
- add alert dialog to ask for confirmation before deleting a term.
- add snackbar message displaying result or error of delete operation.
- implement a customer result object and custom listener interface in
order for the UI to listen from an async task in the data repositories.
- Add wrapper exception for database constraint violations.
- Add code in MainActivity to parse IntentExtra for fragment destination
and request to display snackbar message.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="status">Status</string>
     <string name="start">Start</string>
     <string name="end">End</string>
+    <string name="confirm_delete_term">Are you sure you want to delete the currently selected term?</string>
+    <string name="term_deleted">The term was deleted successfully.</string>
+    <string name="term_delete_failed">Delete failed: Not allowed to delete a term that contains courses.</string>
+    <string name="unexpected_error">An unexpected error occurred.</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
