--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="yes">Yes</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="title_activity_term_edit">TermEditActivity</string>
+    <string name="term_updated">Term updated</string>
+    <string name="save">Save</string>
+    <string name="term_title">Term Title</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
 </resources>
