--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_term_list">All Terms</string>
     <string name="title_activity_course_list">All Courses</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_term">View Term</string>
     <string name="status">Status</string>
@@ -32,4 +30,6 @@
     <string name="start_date">Start Date</string>
     <string name="end_date">End Date</string>
     <string name="term_courses">Term Courses</string>
+    <string name="term_added">The term was added successfully.</string>
+    <string name="term_add_failed">There term was not able to be added.</string>
 </resources>
