feat: Add delete course functionality from course and course edit activities
Along with adding the delete functionality, I changed the ondelete action
in the foreign key constrains on the course entity to cascade so that
all related assessments will also be deleted.  For terms, I changed the
action to restrict so that terms cannot be deleted if it contains courses.

Resolves: #3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="start">Start</string>
     <string name="end">End</string>
     <string name="confirm_delete_term">Are you sure you want to delete the currently selected term?</string>
-    <string name="confirm_delete_course">Are you sure you want to delete the currently selected course?</string>
+    <string name="confirm_delete_course">Are you sure you want to delete the selected course and its assessments?</string>
     <string name="term_deleted">The term was deleted successfully.</string>
     <string name="course_deleted">The course was deleted successfully.</string>
     <string name="term_delete_failed">Delete failed: Not allowed to delete a term that contains courses.</string>
