feat: Add term information to course view and edit activities.
Related issue: #2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="select_a_course_mentor">select a course mentor</string>
     <string name="validation_phone">Please enter a valid telephone number.</string>
     <string name="validation_email">Please enter a valid email address.</string>
+    <string name="term">Term</string>
     <string-array name="sample_list_items">
         <item>First item</item>
         <item>Second item</item>
