feat: Add ability to delete and edit notes
resolves: #8, #9

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,11 @@
     <string name="edit_note">Edit Note</string>
     <string name="cancel">Cancel</string>
     <string name="note_added">A new note was created.</string>
+    <string name="note_insert_failed">There was  problem and the note was not added.</string>
+    <string name="note_deleted">The note was deleted.</string>
+    <string name="note_delete_failed">There was a problem and the note was not deleted.</string>
+    <string name="note_update_failed">There was a problem and the note was not updated.</string>
+    <string name="note_updated">The note was updated.</string>
     <string-array name="sample_list_items">
         <item>First item</item>
         <item>Second item</item>
