--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,17 @@
         <item>Second item</item>
         <item>Third item</item>
     </string-array>
+
+    <string name="alert_notification_title_template">Alert: %1$s</string>
+
+    <!-- TODO: remove this placeholder text -->
+    <string name="alert_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
+        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
+        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
+        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
+        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
+        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
+    </string>
+    <string name="channel_name">Alerts</string>
+    <string name="channel_description">Alert notifications based on course and assessment dates.</string>
 </resources>
