fix: Changed some un-needed navigation code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     </string>
     <string name="channel_name">Alerts</string>
     <string name="channel_description">Alert notifications based on course and assessment dates.</string>
+    <string name="assessment_updated">The assessment was updated.</string>
 </resources>
