feat: Add progress tracking indicator and message to home fragment
Resolves: #12, #13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="course_notification_added">Course alerts for scheduled start or end dates will notify you at 8:00 AM on the scheduled date.</string>
     <string name="enable_goal_alert">Enable Goal Alert</string>
     <string name="home">Home</string>
+    <string name="termProgressMessage">Completed Terms:  %1$d out of %2$d</string>
+    <string name="courseProgressMessage">Completed Courses:  %1$d out of %2$d</string>
 </resources>
