feat: Allow for up to three mentors per course
This is a feature requirement that was not clearly stated, so it was
not present in the first submission.  To the resubmission quicker, I
just added the extra fields to the mentor class, rather than properly
change the DB structure to allow for multiple mentors in a normalized
way.  This could definitely be improved upon.

Related issue: #47

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,6 @@
     <string name="clear_and_seed_db">Clear and Seed DB</string>
     <string name="terms">Terms</string>
     <string name="courses">Courses</string>
+    <string name="course_mentor_3">Course Mentor 3</string>
+    <string name="course_mentor_2">Course Mentor 2</string>
 </resources>
